[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "time_based_storage"
version = "0.1.0"
description = "A thread-safe time-based storage implementation"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["time_based_storage*"]
namespaces = false 